# metadata_localization

./: .gitignore  Makefile  README.md  index.html  paper-site.css  sync_from_workspace.py
culture_map/: README.md  pyproject.toml  requirements.txt
culture_map/slurm/: run_local_country_eval_single.slurm  submit_local_country_eval.sh
culture_map/src/culture_map/: anthropic_runner.py  cli.py  constants.py  gemini_runner.py  local_country_runner.py  openai_runner.py  paper_assets.py  plotting.py  projection.py  provider_runner.py  scoring.py  together_runner.py  utils.py
docs/: COMPONENTS.md  DATASET_AND_AUDIT.md  PRETRAINING.md  REPRODUCIBILITY.md  RESULTS.md  SFT_AND_EVALUATION.md
qa_data/: README.md  README_qa_metacul.md  build_hf_dataset.py  hf_dataset.jsonl
results/: eval_list.json  hf_collection_sync_report.json  hf_collection_sync_report_dry_run.json  perplexity_eval.csv  perplexity_eval.merged.csv  perplexity_eval_country_continent_only.csv  perplexity_eval_global_metadata_backfill.csv  perplexity_eval_metadata_family_full.csv  perplexity_eval_plot13_500m_backfill.csv  perplexity_eval_quick_3b.csv  perplexity_eval_quick_3b_with.csv  qa_metacul_eval_adversarial_by_continent.csv  qa_metacul_eval_adversarial_significance.csv  qa_metacul_eval_adversarial_summary.csv  qa_metacul_eval_adversarial_table.tex  qa_metacul_eval_summary.csv  qa_metacul_eval_summary_3b.csv  qa_metacul_eval_summary_3b_best.csv
slurm_live/: archive_stale_benchmark_artifacts.py  convert_intermediate_1b_metadata_family.sbatch  convert_intermediate_3b_to_hf.sbatch  merge_sft_3b.sbatch  (+127 more)
(+4581 files in other folders)
